# rhpc-classic-prey-predator

./: CMakeLists.txt  main.cpp
include/: agent.h  config.h  grass.h  model.h  output.h  package.h  prey.h  types.h
props/: model.props
src/: agent.cpp  grass.cpp  model.cpp  output.cpp  package.cpp  prey.cpp
